# InduForm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_token_revocation_and_password_reset.py  003_add_foreign_key_indexes.py  004_add_project_and_zone_columns.py
docs/: index.html  style.css
examples/: manufacturing_plant.yaml
src/induform/: __init__.py  cli.py  templates.py
src/induform/api/: __init__.py  rate_limit.py  routes.py  server.py
src/induform/db/: __init__.py  database.py  models.py
src/induform/engine/: __init__.py  attack_path.py  cve_lookup.py  gap_analysis.py  policy.py  resolver.py  risk.py  standards.py  validator.py
src/induform/generators/: __init__.py  compliance.py  firewall.py  vlan.py
src/induform/iec62443/: __init__.py  requirements.py  security_levels.py
src/induform/models/: __init__.py  asset.py  conduit.py  project.py  zone.py
src/induform/security/: __init__.py  jwt.py  password.py  permissions.py
tests/: __init__.py  conftest.py  test_api_activity.py  test_api_admin.py  test_api_auth.py  test_api_comments.py  test_api_dashboard.py  test_api_gap_analysis.py  test_api_nmap.py  test_api_notifications.py  test_api_presence.py  test_api_projects.py  test_api_routes.py  test_api_search.py  test_api_teams.py  test_api_templates.py  test_api_versions.py  test_api_vulnerabilities.py  test_api_websocket.py  test_attack_path.py  test_engine.py  test_generators.py  test_integration.py  test_models.py  test_projects_export.py  test_validator.py
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: project-editor.spec.ts  rollup-dashboard.spec.ts  smoke.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: ActivityLogPanel.tsx  AddAssetDialog.tsx  AddConduitDialog.tsx  AddZoneDialog.tsx  AnalyticsPanel.tsx  AssetTable.tsx  AttackPathPanel.tsx  (+44 more)
(+84 files in other folders)
